--- a/index.html
+++ b/index.html
@@ -6,11 +6,40 @@
 	</head>
 
 	<body>
-		<img src="logo.gif"/>
 
+		<ul id="navbar">
+			<li>+Andrew</li>
+			<li>Gmail</li>
+			<li>Images</li>
+			<li><img src="apps.png" alt="Apps"/></li>
+			<li><img src="notification.png" alt="Notifications"/></li>
+			<li><img src="user.png" alt="Your Profile"/></li>
+			<!-- Center images better...put each inside a div container? !-->
+		</ul>
+
+		<img class="centering1" src="logo.gif" alt="Google"/>
+		<center>
 		<form action="somescript.php" method="get">
-			<input type="text" name="SearchQuery"/>
+			<input id="searchbox" type="text" name="SearchQuery"/>
+			<br/>
+			<div class="centering2">
+				<input id="button" type="submit" value="Google Search"/>
+				<input id="button" type="submit" value="I'm Feeling Lucky"/>
+			</div>
+		</form>
 
+		<br/>
+		<br/>
+
+		<p id="funfactoid">OK Google, <a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=how+many+calories+are+in+pumpkin+pie%3F">how many calories are in pumpkin pie?</a></p>
+		</div>
+		</center>
+		<!-- Figure out how to center the 'Google Search' and 'I'm Feeling Lucky' buttons without using the HTML <center> tag. Try to keep styling in the CSS styesheet. !-->
+
+		<!-- Add a div container with page width for footer. Add individual div containers inside as display:inline-block... !-->
+		<div id="footer">
+			
+		</div>
 	</body>
 
 </html>
