--- a/index_with_notes.html
+++ b/index_with_notes.html
@@ -6,6 +6,7 @@
 	</head>
 
 	<body>
+
 		<ul id="navbar_top">
 			<li><a href="">+Andrew</a></li>
 			<li><a href="">Gmail</a></li>
@@ -13,6 +14,7 @@
 			<li id="apps_icon"><a href=""><img src="apps.png" alt="Apps"/></a></li>
 			<li id="notifications_icon"><a href=""><img src="notification.png" alt="Notifications"/></a></li>
 			<li id="profile_icon"><a href=""><img src="user.png" alt="Your Profile"/></a></li>
+			<!-- Center images better...put each inside a div container? No...each one has different dimensions and default positioning so it's probably better to use IDs and manually adjust for each li image. !-->
 		</ul>
 
 		<img id="google_logo" src="google.png" alt="Google"/>
@@ -31,6 +33,8 @@
 		<div id="fun_factoid">
 			OK Google, <a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=how+many+calories+are+in+pumpkin+pie%3F">how many calories are in pumpkin pie?</a>
 		</div>
+		<!-- Figure out how to center the 'Google Search' and 'I'm Feeling Lucky' buttons without using the HTML <center> tag. Try to keep styling in the CSS styesheet. !-->
+		<!-- Update to above note: used div as a container for the question below the search buttons. Positioned the div by using 'width', 'margin' and the subproperties of 'margin'. The display value for div is 'block' by default. !-->
 
 		<div id="footer">
 			<ul id="navbar_bottom_left">
@@ -43,6 +47,9 @@
 				<li><a href="">Settings</a></li>
 			</ul>
 		</div>
+		<!-- Added a div container with page width for footer. Added individual div containers for ul as display:inline-block, and then each li element as an inline-block as well. !-->
 	</body>
 
 </html>
+
+<!-- Make links go somewhere and add pseudo-classes (ex a:hover{})
