Sectioned page into 'header', 'page_contents', and 'footer' IDs. Updated stylesheet. Added Google Now icon.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Google</title>
 		<link type="text/css" rel="stylesheet" href="style.css"/>
+		<link type="image/jpeg" rel="icon" href="images/favicon.jpg"/>
 	</head>
 
 	<body>
@@ -21,10 +22,13 @@
 			<img id="google_logo" src="images/google.png" alt="Google"/>
 			<form action="somescript.php" method="get">
 				<input id="searchbox" type="text" name="SearchQuery"/>
+				<a href=""><img id="voice_icon" src="images/voice.gif"/></a>
+
 				<br/>
+				
 				<div class="centering">
-				<input id="button" type="submit" value="Google Search"/>
-				<input id="button" type="submit" value="I'm Feeling Lucky"/>
+					<input id="button" type="submit" value="Google Search"/>
+					<input id="button" type="submit" value="I'm Feeling Lucky"/>
 				</div>
 			</form>
 
@@ -50,3 +54,5 @@
 	</body>
 
 </html>
+
+<!-- just need to figure out how to make footer cover full bottom of page !-->
