--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 	<body>
 		<div id="header">
-			<ul id ="navbar_top">
+			<ul>
+				
 				<li><a href="">+Andrew</a></li>
 				<li><a href="">Gmail</a></li>
 				<li><a href="">Images</a></li>
@@ -22,7 +23,7 @@
 			<img id="google_logo" src="images/google.png" alt="Google"/>
 			<form action="somescript.php" method="get">
 				<input id="searchbox" type="text" name="SearchQuery"/>
-				<a href=""><img id="voice_icon" src="images/voice.gif"/></a>
+				<!--a href=""><img id="voice_icon" src="images/voice.gif"/></a>!-->
 
 				<br/>
 				
@@ -54,5 +55,3 @@
 	</body>
 
 </html>
-
-<!-- just need to figure out how to make footer cover full bottom of page !-->
